--- a/views/user.hbs
+++ b/views/user.hbs
@@ -9,6 +9,11 @@
 <br>
 <form action="/edit" method="GET"><button>Manage Your Account</button></form>
 <form action="/authentication/deleteAccount" method="POST"><button>Delete Account</button></form>
+
+<aside class="asideBar">
+  {{> sidebar}}
+</aside>
+
 <script>
   const $sampleMap = document.getElementById('sample-map');
 
