--- a/views/userPublic.hbs
+++ b/views/userPublic.hbs
@@ -7,6 +7,10 @@
 <h3>Players location:</h3>
 <div id="sample-map"></div>
 
+<aside class="asideBar">
+  {{> sidebar}}
+</aside>
+
 <script>
       const $sampleMap = document.getElementById('sample-map');
 
