--- a/views/encounter/edit.hbs
+++ b/views/encounter/edit.hbs
@@ -1,39 +1,46 @@
-<header class='formEdit'>
+<section>
+
+
+<header>
   <h2>Edit Event</h2>
 </header>
 
 
-<form action="/encounter/single/{{ _id }}/edit" method="POST"class='formEdit'>
+<form action="/encounter/single/{{ _id }}/edit" method="POST">
   <h3>Host: {{singleEvent.host.name}}</h3>
-  <button type="submit" class="btn btn-primary"> Submit </button>
-  <div class="form-group">
+  <div>
     <label for="eventName"> Event Name </label>
-    <input type="text" name='eventName' id='eventName' value="{{singleEvent.eventName}}" required class="form-control">
+    <input type="text" name='eventName' id='eventName' value="{{singleEvent.eventName}}" required >
   </div>
 
-  <div class="form-group">
+  <div>
     {{>map}}
   </div>
   
-  <div class="form-group">
+  <div>
     <label for="date"> Event Date </label>
-    <input type="datetime-local" name='date' id='date' required class="form-control" value="date">
+    <input type="datetime-local" name='date' id='date' required value="date">
   </div>
 
-  <div class="form-group">
+  <div>
     <label for="numberOfPlayer"> Number of Players </label>
-    <input type="number" name='numberOfPlayer' id='numberOfPlayer' min="2" required value="{{singleEvent.numberOfPlayer}}" class="form-control">
+    <input type="number" name='numberOfPlayer' id='numberOfPlayer' min="2" required value="{{singleEvent.numberOfPlayer}}">
   </div>
 
-  <div class="form-group">
+  <div>
     <label for="gameList"> Select your Game </label>
-    <select type="text" name='gameList' id='gameList' required class="form-control">
+    <select type="text" name='gameList' id='gameList' required>
       {{#each singleEvent.total as |item|}}
       <option value="{{item}}">{{item}}</option>
       {{/each}}
+      </select>
+  </div>
+  <div>
+    <button type="submit"> Submit </button>
   </div>
 </form>
 
-<aside>
+<aside class="asideBar">
   {{>sidebar}}
 </aside>
+</section>
