--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -1,45 +1,45 @@
 
-<ul class="list-group-flush">
-  <li class="list-group-item">eventName: {{singleEvent.eventName}} </li>
-  <li class="list-group-item">host: {{singleEvent.host.name}} </li>
-  <li class="list-group-item">Location:
+<ul>
+  <li>eventName: {{singleEvent.eventName}} </li>
+  <li>host: {{singleEvent.host.name}} </li>
+  <li>Location:
     <br>
     <div id="sample-map"></div>
   </li>
 
-  <li class="list-group-item">date: {{singleEvent.date}} </li>
-  <li class="list-group-item">numberOfPlayer: {{singleEvent.numberOfPlayer}} </li>
+  <li>date: {{singleEvent.date}} </li>
+  <li>numberOfPlayer: {{singleEvent.numberOfPlayer}} </li>
   
-  <li class="list-group-item">Players List: 
+  <li>Players List: 
     <br>
     {{#each singleEvent.waitingList}}
     {{ name }} <br>
     {{/each}}</li>  
-  <li class="list-group-item">Waiting List: 
+  <li>Waiting List: 
     <br>
     {{#each singleEvent.players}}
     {{ name }} <br>
     {{/each}}</li>  
 
-  <a href="/encounter/single/{{ singleEvent._id }}/join" class="btn btn-outline-success"> Join Event </a></li>
-  <form action="/encounter/single/{{ singleEvent._id }}/deletePlayer" method="POST"><button class="btn btn-outline-danger"> Leave Event </button></form>
+  <a href="/encounter/single/{{ singleEvent._id }}/join" > Join Event </a></li>
+  <form action="/encounter/single/{{ singleEvent._id }}/deletePlayer" method="POST"><button> Leave Event </button></form>
 
-  <li class="list-group-item">game: {{singleEvent.gameList}} </li>
-  <li class="list-group-item"></li><br></li>
-  <li class="list-group-item"><a href="/encounter/single/{{ singleEvent._id }}/edit" class="btn btn-outline-success"> edit event </a></li>
-  <li class="list-group-item"><form action="/encounter/single/{{ singleEvent._id }}/delete" method="POST"><button class="btn btn-outline-danger"> delete event </button></form></li>
+  <li>game: {{singleEvent.gameList}} </li>
+  <li></li><br></li>
+  <li><a href="/encounter/single/{{ singleEvent._id }}/edit" > edit event </a></li>
+  <li><form action="/encounter/single/{{ singleEvent._id }}/delete" method="POST"><button> delete event </button></form></li>
 </ul>
 
 
-<section class='formEdit'>
-  <h4 class='text-secondary'>Comments</h4>
-  <div class="card">
-    <div class="card-body">
+<section>
+  <h4>Comments</h4>
+  <div>
+    <div>
       {{#each singleEvent.comments}}
             <div>
-              <p class="card-text">{{this.comment}}</p>
-              <h6 class="card-subtitle mb-2 text-muted">{{this.player}}</h6>
-              <form action="/encounter/single/{{ id }}/deleteComment" method="POST"><button class="btn btn-outline-danger"> delete comment </button></form>
+              <p>{{this.comment}}</p>
+              <h6>{{this.player}}</h6>
+              <form action="/encounter/single/{{ id }}/deleteComment" method="POST"><button> delete comment </button></form>
             </div>
       {{/each}}
     </div>
@@ -47,13 +47,13 @@
 
 
   <form action="/encounter/single/addComment?event_id={{ singleEvent._id }}" method="post">
-  <h5 class="form-text text-muted"> Add a Comment {{user.name}}</h5>
-   <div class="form-group">
-      <label for="comment" class='text-secondary'>Comment:</label>
-      <textarea type="text" name="comment" class="form-control" placeholder="Please write your comment here..."></textarea>
+  <h5> Add a Comment {{user.name}}</h5>
+   <div>
+      <label for="comment">Comment:</label>
+      <textarea type="text" name="comment" placeholder="Please write your comment here..."></textarea>
     </div>
 
-    <button type="submit" class="btn btn-outline-primary card-link">ADD</button>
+    <button type="submit">ADD</button>
   </form>
 </section>
 <aside>
