--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,7 +11,7 @@ body {
   align-items: center; }
   body h1 {
     text-align: center;
-    color: purple; }
+    color: #ff33ff; }
   body nav {
     margin-top: 0;
     z-index: 50;
@@ -39,7 +39,7 @@ body {
         align-self: center;
         padding: 0 10px;
         text-decoration: none;
-        color: #aa07aa;
+        color: #ff33ff;
         font-weight: bolder; }
       body nav aside a:hover {
         text-decoration: none;
@@ -57,7 +57,7 @@ body {
       body nav aside button:hover {
         transform: scale(0.9) perspective(1px);
         transition-timing-function: ease-out;
-        color: purple; }
+        color: #ff33ff; }
   body footer {
     padding-top: 10px;
     background-color: #1a1a1a;
@@ -116,7 +116,7 @@ h3 {
   margin: 1em;
   margin-left: 0;
   padding: 0.5em;
-  border: 4px solid #aa07aa;
+  border: 4px solid #ff33ff;
   border-radius: 15px;
   color: white;
   width: 100%;
@@ -126,16 +126,23 @@ h3 {
 .channelProp:hover {
   transform: scale(1.05) perspective(1px);
   transition-timing-function: ease-out;
-  color: purple;
+  color: #ff33ff;
   text-decoration: none; }
 
 .inImage {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 40px;
-  padding: 40px;
-  background-color: rgba(26, 26, 26, 0.815); }
+  flex-direction: column;
+  margin: 20px;
+  padding: 20px;
+  background-color: rgba(26, 26, 26, 0.815);
+  width: 96%;
+  height: 85%; }
+  .inImage h2 {
+    word-break: break-word;
+    font-size: 3em;
+    margin-bottom: 20px; }
 
 .channelImg {
   width: 50px; }
@@ -184,19 +191,19 @@ h3 {
   border-radius: 10px; }
 
 .sidebarLinks {
-  color: #aa07aa;
+  color: #ff33ff;
   font-size: 1em;
   font-weight: bolder; }
 
 .sidebarLinks:hover {
   word-break: break-word;
   text-decoration: none;
-  color: purple; }
+  color: #ff33ff; }
 
 .asideBtn {
   background: none;
   color: grey;
-  border: 5px solid #aa07aa;
+  border: 5px solid #ff33ff;
   border-radius: 15px;
   padding: 5;
   font-style: none;
@@ -207,7 +214,7 @@ h3 {
 .asideBtn:hover {
   transform: scale(1) perspective(1px);
   transition-timing-function: ease-out;
-  color: purple; }
+  color: #ff33ff; }
 
 .indexImg {
   width: 600px;
@@ -218,6 +225,39 @@ h3 {
   padding: 2em;
   border-radius: 0 20px 20px 0;
   margin-right: 50px;
-  margin-left: 0; }
+  margin-left: 0;
+  flex-grow: 1; }
+
+.deleteBtn {
+  background: none;
+  color: red;
+  border: 5px solid red;
+  border-radius: 15px;
+  padding: 5;
+  font-style: none;
+  outline: inherit;
+  font-size: 0.5em;
+  margin-bottom: 25px; }
+
+.deleteBtn:hover {
+  transform: scale(1.2) perspective(1px);
+  transition-timing-function: ease-out;
+  color: red; }
+
+.editBtn {
+  background: none;
+  color: #ff33ff;
+  border: 5px solid #ff33ff;
+  border-radius: 15px;
+  padding: 5;
+  font-style: none;
+  outline: inherit;
+  font-size: 0.5em;
+  margin-bottom: 25px; }
+
+.editBtn:hover {
+  transform: scale(1.2) perspective(1px);
+  transition-timing-function: ease-out;
+  color: #ff33ff; }
 
 /*# sourceMappingURL=style.css.map */
