css single event

--- a/views/channels/index.hbs
+++ b/views/channels/index.hbs
@@ -5,7 +5,7 @@
   <div class="content background">
 
     {{#each data}}
-   <a style="text-decoration: none;" href="/channels/{{_id}}"><aside class="channelProp">{{name}}</aside></a>
+   <a style="text-decoration: none" href="/channels/{{_id}}"><aside class="channelProp">{{name}}</aside></a>
           
     {{/each}}
   </div>
