--- a/views/partials/comment.hbs
+++ b/views/partials/comment.hbs
@@ -1,4 +1,4 @@
 <div>
-  <small><a href="/profile/{{ author._id }}">{{ author.name }}</a></small>
+  <a class="aAuthor" href="/profile/{{ author._id }}">{{ author.name }}</a>
   <p>{{ content }}</p>
 </div>
