--- a/views/partials/commentform.hbs
+++ b/views/partials/commentform.hbs
@@ -1,7 +1,6 @@
  
 <form action="/channels/{{ post.channel._id }}/{{ post._id }}/comment" method="POST">
-  <label for="input-content">Your Comment</label>
-  <textarea name="content" id="input-content" placeholder="Your comment here..."></textarea>
-
-  <button>Submit Comment</button>
+  <label for="input-content"></label>
+  <textarea class="commentArea" name="content" id="input-content" placeholder="Your comment here..."></textarea>
+  <button style="font-size: 1em" class="editBtn">Submit Comment</button>
 </form>
