--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,25 +13,14 @@
 </div>
 
 {{else}}
-<div>
   <div class="indexText"><img class="indexImg" src="/images/dy play one color.png" alt="logo"></div>
+<div class="map">
   <h2>Welcome to DYPlay</h2>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In natus consequuntur similique sit debitis perferendis
     quos repellendus doloribus aliquid. Quos dignissimos eveniet rerum officia aut perspiciatis minima magnam veritatis
     eius
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. In natus consequuntur similique sit debitis perferendis
     quos
-    repellendus doloribus aliquid. Quos dignissimos eveniet rerum officia aut perspiciatis minima magnam veritatis eius!
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. In natus consequuntur similique sit debitis perferendis
-    quos
-    repellendus doloribus aliquid. Quos dignissimos eveniet rerum officia aut perspiciatis minima magnam veritatis eius!
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. In natus consequuntur similique sit debitis perferendis
-    quos
-    repellendus doloribus aliquid. Quos dignissimos eveniet rerum officia aut perspiciatis minima magnam veritatis eius!
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. In natus consequuntur similique sit debitis perferendis
-    quos
-    repellendus doloribus aliquid. Quos dignissimos eveniet rerum officia aut perspiciatis minima magnam veritatis
-    eius!!
   </p>
 
 </div>
