--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -11,7 +11,7 @@ body {
   align-items: center; }
   body h1 {
     text-align: center;
-    color: #ff33ff; }
+    color: purple; }
   body nav {
     margin-top: 0;
     z-index: 50;
@@ -39,7 +39,7 @@ body {
         align-self: center;
         padding: 0 10px;
         text-decoration: none;
-        color: #ff33ff;
+        color: #aa07aa;
         font-weight: bolder; }
       body nav aside a:hover {
         text-decoration: none;
@@ -57,7 +57,7 @@ body {
       body nav aside button:hover {
         transform: scale(0.9) perspective(1px);
         transition-timing-function: ease-out;
-        color: #ff33ff; }
+        color: purple; }
   body footer {
     padding-top: 10px;
     background-color: #1a1a1a;
@@ -68,8 +68,7 @@ body {
       width: 15px; }
 
 .names {
-  font-size: 0.7em;
-  list-style-type: none; }
+  font-size: 0.7em; }
 
 h1 {
   padding: 0.5em;
@@ -79,6 +78,10 @@ h1 {
 h3 {
   align-items: left;
   text-align: left; }
+
+.indexImg {
+  width: 600px;
+  justify-content: center; }
 
 .indexText {
   align-items: center;
@@ -91,8 +94,7 @@ h3 {
   justify-content: space-between;
   align-items: top;
   margin: 2em;
-  margin-right: 0;
-  margin-left: 0; }
+  margin-right: 0; }
 
 .content {
   display: flex;
@@ -100,8 +102,7 @@ h3 {
   justify-content: center;
   justify-self: center;
   align-items: top;
-  padding-right: 3em;
-  flex-grow: 1; }
+  padding-right: 3em; }
 
 .channelDesc {
   display: flex;
@@ -109,40 +110,13 @@ h3 {
   justify-content: center;
   justify-self: center;
   align-self: center;
-  font-size: 1.5em;
-  height: 500px; }
+  font-size: 1.5em; }
 
 .channelProp {
   margin: 1em;
-  margin-left: 0;
-  padding: 0.5em;
-  border: 4px solid #ff33ff;
-  border-radius: 15px;
-  color: white;
-  width: 100%;
-  font-size: 1.5em;
-  text-decoration: none; }
-
-.channelProp:hover {
-  transform: scale(1.05) perspective(1px);
-  transition-timing-function: ease-out;
-  color: #ff33ff;
-  text-decoration: none; }
-
-.inImage {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 20px;
-  padding: 20px;
-  background-color: rgba(26, 26, 26, 0.815);
-  width: 96%;
-  height: 85%; }
-  .inImage h2 {
-    word-break: break-word;
-    font-size: 3em;
-    margin-bottom: 20px; }
+  padding: 1em;
+  border: 2px solid grey;
+  border-radius: 15px; }
 
 .channelImg {
   width: 50px; }
@@ -151,8 +125,7 @@ h3 {
   margin: 0px;
   max-width: 1100px;
   align-self: center;
-  z-index: 40;
-  flex-grow: 1; }
+  z-index: 40; }
 
 .LatLng {
   display: flex;
@@ -166,14 +139,12 @@ h3 {
   height: 500px;
   z-index: 40;
   border: 30px;
-  border-radius: 20px;
-  flex-grow: 1; }
+  border-radius: 20px; }
 
 .map {
   padding: 30px;
   border-radius: 20px;
-  background-color: #1a1a1a;
-  flex-grow: 1; }
+  background-color: #1a1a1a; }
 
 .asideBar {
   min-width: 250px;
@@ -191,73 +162,13 @@ h3 {
   border-radius: 10px; }
 
 .sidebarLinks {
-  color: #ff33ff;
+  color: #aa07aa;
   font-size: 1em;
   font-weight: bolder; }
 
 .sidebarLinks:hover {
   word-break: break-word;
   text-decoration: none;
-  color: #ff33ff; }
-
-.asideBtn {
-  background: none;
-  color: grey;
-  border: 5px solid #ff33ff;
-  border-radius: 15px;
-  padding: 5;
-  font-style: none;
-  outline: inherit;
-  font-size: 1.5em;
-  margin-bottom: 25px; }
-
-.asideBtn:hover {
-  transform: scale(1) perspective(1px);
-  transition-timing-function: ease-out;
-  color: #ff33ff; }
-
-.indexImg {
-  width: 600px;
-  justify-content: center; }
-
-.background {
-  background-color: #1a1a1a;
-  padding: 2em;
-  border-radius: 0 20px 20px 0;
-  margin-right: 50px;
-  margin-left: 0;
-  flex-grow: 1; }
-
-.deleteBtn {
-  background: none;
-  color: red;
-  border: 5px solid red;
-  border-radius: 15px;
-  padding: 5;
-  font-style: none;
-  outline: inherit;
-  font-size: 0.5em;
-  margin-bottom: 25px; }
-
-.deleteBtn:hover {
-  transform: scale(1.2) perspective(1px);
-  transition-timing-function: ease-out;
-  color: red; }
-
-.editBtn {
-  background: none;
-  color: #ff33ff;
-  border: 5px solid #ff33ff;
-  border-radius: 15px;
-  padding: 5;
-  font-style: none;
-  outline: inherit;
-  font-size: 0.5em;
-  margin-bottom: 25px; }
-
-.editBtn:hover {
-  transform: scale(1.2) perspective(1px);
-  transition-timing-function: ease-out;
-  color: #ff33ff; }
+  color: purple; }
 
 /*# sourceMappingURL=style.css.map */
