--- a/views/encounter/index.hbs
+++ b/views/encounter/index.hbs
@@ -1,6 +1,3 @@
-
-
-
 <section class="sectionComments">
 
 <div class="content background">
@@ -13,7 +10,7 @@
 </div>
 
 
-<aside class="asidebar">
+<aside class="asideBar">
   <a href="/encounter/create" ><button class="asideBtn">Create encounter</button></a>
   {{>sidebar}}
 </aside>
