--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,18 +1,34 @@
 <h1>Welcome {{user.name}}!</h1>
-<img src="{{user.picture}}" alt="profile picture">
-<h2>Favorite games:</h2>
-<p>{{user.games}}.</p>
-<h3>About you:</h3>
-<p>{{user.description}}</p>
-<h3>Players near you:</h3>
-<div id="sample-map"></div>
-<br>
-<form action="/authentication/edit" method="GET"><button>Manage Your Account</button></form>
-<form action="/authentication/deleteAccount" method="POST"><button>Delete Account</button></form>
+
+<section class="sectionComments">
+
+  <div class="content">
+
+    <div class="map sectionComments" style="margin-bottom: 5%;  justify-content: space-around;">
+      <img src="{{user.picture}}" alt="profile picture" style="max-width: 40%; margin-right: 2%">
+      
+      <div>
+        <h3>Favorite games:</h3>
+        <p>{{user.games}}.</p>
+        <h3>About you:</h3>
+        <p>{{user.description}}</p>
+      </div>
+    </div>
+
+    <div class="map">
+      <h3>Players near you:</h3>
+      <div id="sample-map"></div>
+    </div>
+  
+  </div>
 
 <aside class="asideBar">
+  <form action="/authentication/edit" method="GET"><button class="asideBtn">Manage Your Account</button></form>
   {{> sidebar}}
+  <form action="/authentication/deleteAccount" method="POST"><button class="deleteBtn">Delete Account</button></form>
 </aside>
+
+</section>
 
 <script>
   const $sampleMap = document.getElementById('sample-map');
