--- a/views/encounter/index.hbs
+++ b/views/encounter/index.hbs
@@ -4,7 +4,7 @@
 {{#each encounters}}
 <a href="/encounter/single/{{ _id }}" style="text-decoration: none">
 <aside class="channelProp">
-{{eventName}}, {{date}} , number of player: {{numberOfPlayer}}
+<p>{{eventName}}, number of player: {{numberOfPlayer}}</p><p>{{date}}</p>
 </aside></a>
 {{/each}}
 </div>
