--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,8 +8,7 @@ body {
   z-index: 1;
   margin-top: 0;
   margin-left: 0;
-  align-items: center;
-  width: 100%; }
+  align-items: center; }
   body h1 {
     text-align: center;
     color: purple; }
