--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -181,7 +181,7 @@ h3 {
   margin: 0px;
   max-width: 1100px;
   align-self: center;
-  z-index: 40;
+  
   flex-grow: 1;
 }
 
@@ -196,10 +196,10 @@ h3 {
 #sample-map {
   width: 900px;
   height: 500px;
-  z-index: 40;
-  border: 30px;
+	flex-grow: 1;
+  
   border-radius: 20px;
-  flex-grow: 1;
+  
 }
 .map {
   padding: 30px;
@@ -208,11 +208,12 @@ h3 {
   flex-grow: 1;
 }
 .asideBar {
-  min-width: 250px;
+  width: 250px;
   background-color: $grey;
   padding: 2em;
   border-radius: 20px 0 0 20px;
-  margin-left: 0em;
+	margin-left: 0em;
+	
 }
 .sidebarLinkBackground {
   background-color: $fullgrey;
@@ -313,13 +314,14 @@ h3 {
 .aAuthor {
   display: flex;
   flex-direction: row;
-  align-self: center;
+  align-self: left;
 
   text-decoration: none;
   color: $roxo;
   font-weight: bolder;
 }
-.aAuthor {
+.aAuthor:hover {
+  text-align: left;
   text-decoration: none;
   color: rgb(128, 0, 128);
 }
@@ -331,4 +333,8 @@ h3 {
 .commentForm {
   margin-top: 40px;
   margin-bottom: 0;
+}
+.join{
+	display: flex;
+	flex-direction: row;
 }
