edit and signUp

--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -23,8 +23,8 @@
     <h4>Game You Play</h4>
     <div class="input-group mb-3">
       {{#each gameList as |item|}}
-      <div class="input-group-prepend" style="margin: 1.5%;">
-        <div class="editBtn" style="font-size: 1em;">
+      <div style="margin: 1.5%;">
+        <div>
         <input name="{{item}}" type="checkbox" id="inlineCheckbox">
         <label class="form-check-label" for="inlineCheckbox" >{{item}}</label>
         </div>
