--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,11 +8,10 @@ body {
   z-index: 1;
   margin-top: 0;
   margin-left: 0;
-  align-items: center;
-  width: 100%; }
+  align-items: center; }
   body h1 {
     text-align: center;
-    color: purple; }
+    color: #ff33ff; }
   body nav {
     margin-top: 0;
     z-index: 50;
@@ -40,7 +39,7 @@ body {
         align-self: center;
         padding: 0 10px;
         text-decoration: none;
-        color: #aa07aa;
+        color: #ff33ff;
         font-weight: bolder; }
       body nav aside a:hover {
         text-decoration: none;
@@ -58,7 +57,7 @@ body {
       body nav aside button:hover {
         transform: scale(0.9) perspective(1px);
         transition-timing-function: ease-out;
-        color: purple; }
+        color: #ff33ff; }
   body footer {
     padding-top: 10px;
     background-color: #1a1a1a;
@@ -69,7 +68,8 @@ body {
       width: 15px; }
 
 .names {
-  font-size: 0.7em; }
+  font-size: 0.7em;
+  list-style-type: none; }
 
 h1 {
   padding: 0.5em;
@@ -79,10 +79,6 @@ h1 {
 h3 {
   align-items: left;
   text-align: left; }
-
-.indexImg {
-  width: 600px;
-  justify-content: center; }
 
 .indexText {
   align-items: center;
@@ -95,7 +91,8 @@ h3 {
   justify-content: space-between;
   align-items: top;
   margin: 2em;
-  margin-right: 0; }
+  margin-right: 0;
+  margin-left: 0; }
 
 .content {
   display: flex;
@@ -103,7 +100,8 @@ h3 {
   justify-content: center;
   justify-self: center;
   align-items: top;
-  padding-right: 3em; }
+  padding-right: 3em;
+  flex-grow: 1; }
 
 .channelDesc {
   display: flex;
@@ -111,12 +109,14 @@ h3 {
   justify-content: center;
   justify-self: center;
   align-self: center;
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  height: 500px; }
 
 .channelProp {
   margin: 1em;
-  padding: 1em;
-  border: 2px solid grey;
+  margin-left: 0;
+  padding: 0.5em;
+  border: 4px solid #ff33ff;
   border-radius: 15px;
   color: white;
   width: 100%;
@@ -124,9 +124,9 @@ h3 {
   text-decoration: none; }
 
 .channelProp:hover {
-  transform: scale(1.03) perspective(1px);
+  transform: scale(1.05) perspective(1px);
   transition-timing-function: ease-out;
-  color: #aa07aa;
+  color: #ff33ff;
   text-decoration: none; }
 
 .inImage {
@@ -136,10 +136,9 @@ h3 {
   flex-direction: column;
   margin: 20px;
   padding: 20px;
-  background-color: rgba(179, 179, 179, 0.31);
+  background-color: rgba(26, 26, 26, 0.815);
   width: 96%;
-  height: 85%;
-  border-radius: 20px; }
+  height: 85%; }
   .inImage h2 {
     word-break: break-word;
     font-size: 3em;
@@ -152,7 +151,8 @@ h3 {
   margin: 0px;
   max-width: 1100px;
   align-self: center;
-  z-index: 40; }
+  z-index: 40;
+  flex-grow: 1; }
 
 .LatLng {
   display: flex;
@@ -166,12 +166,14 @@ h3 {
   height: 500px;
   z-index: 40;
   border: 30px;
-  border-radius: 20px; }
+  border-radius: 20px;
+  flex-grow: 1; }
 
 .map {
   padding: 30px;
   border-radius: 20px;
-  background-color: #1a1a1a; }
+  background-color: #1a1a1a;
+  flex-grow: 1; }
 
 .asideBar {
   min-width: 250px;
@@ -189,19 +191,19 @@ h3 {
   border-radius: 10px; }
 
 .sidebarLinks {
-  color: #aa07aa;
+  color: #ff33ff;
   font-size: 1em;
   font-weight: bolder; }
 
 .sidebarLinks:hover {
   word-break: break-word;
   text-decoration: none;
-  color: purple; }
+  color: #ff33ff; }
 
 .asideBtn {
   background: none;
   color: grey;
-  border: 5px solid #aa07aa;
+  border: 5px solid #ff33ff;
   border-radius: 15px;
   padding: 5;
   font-style: none;
@@ -212,7 +214,7 @@ h3 {
 .asideBtn:hover {
   transform: scale(1) perspective(1px);
   transition-timing-function: ease-out;
-  color: #aa07aa; }
+  color: #ff33ff; }
 
 .indexImg {
   width: 600px;
@@ -244,8 +246,8 @@ h3 {
 
 .editBtn {
   background: none;
-  color: #aa07aa;
-  border: 5px solid #aa07aa;
+  color: #ff33ff;
+  border: 5px solid #ff33ff;
   border-radius: 15px;
   padding: 5;
   font-style: none;
@@ -256,37 +258,6 @@ h3 {
 .editBtn:hover {
   transform: scale(1.2) perspective(1px);
   transition-timing-function: ease-out;
-  color: #aa07aa; }
-
-.commentBox {
-  display: flex;
-  flex-direction: column;
-  background-color: rgba(179, 179, 179, 0.11);
-  margin-top: 5px;
-  border-radius: 20px;
-  padding: 10px 20px;
-  word-break: break-word; }
-  .commentBox p {
-    font-size: 1.5em; }
-
-.aAuthor {
-  display: flex;
-  flex-direction: row;
-  align-self: center;
-  text-decoration: none;
-  color: #aa07aa;
-  font-weight: bolder; }
-
-.aAuthor {
-  text-decoration: none;
-  color: purple; }
-
-.commentArea {
-  width: 100%;
-  background-color: rgba(179, 179, 179, 0.11); }
-
-.commentForm {
-  margin-top: 40px;
-  margin-bottom: 0; }
+  color: #ff33ff; }
 
 /*# sourceMappingURL=style.css.map */
