--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -2,7 +2,7 @@ $font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $grey: hsla(0, 0, 10%, 1);
 $fullgrey: hsla(0, 0, 70%, 0.11);
 $titlesGrey: hsla(0, 0, 80%, 1);
-$roxo: rgb(170, 7, 170);
+$roxo: #ff33ff;
 * {
   box-sizing: border-box;
   font-family: $font-sans;
@@ -17,7 +17,7 @@ body {
   align-items: center;
   h1 {
     text-align: center;
-    color: rgb(128, 0, 128);
+    color: $roxo;
   }
 
   nav {
@@ -68,7 +68,7 @@ body {
       button:hover {
         transform: scale(0.9) perspective(1px);
         transition-timing-function: ease-out;
-        color: rgb(128, 0, 128);
+        color: $roxo;
       }
     }
   }
@@ -89,6 +89,7 @@ body {
 }
 .names {
   font-size: 0.7em;
+  list-style-type: none;
 }
 
 h1 {
@@ -101,10 +102,7 @@ h3 {
   align-items: left;
   text-align: left;
 }
-.indexImg {
-  width: 600px;
-  justify-content: center;
-}
+
 .indexText {
   align-items: center;
   justify-content: center;
@@ -118,6 +116,7 @@ h3 {
   align-items: top;
   margin: 2em;
   margin-right: 0;
+  margin-left: 0;
 }
 .content {
   display: flex;
@@ -126,6 +125,7 @@ h3 {
   justify-self: center;
   align-items: top;
   padding-right: 3em;
+  flex-grow: 1;
 }
 .channelDesc {
   display: flex;
@@ -134,11 +134,14 @@ h3 {
   justify-self: center;
   align-self: center;
   font-size: 1.5em;
+  height: 500px;
 }
+
 .channelProp {
   margin: 1em;
-  padding: 1em;
-  border: 2px solid grey;
+  margin-left: 0;
+  padding: 0.5em;
+  border: 4px solid $roxo;
   border-radius: 15px;
   color: white;
   width: 100%;
@@ -178,7 +181,8 @@ h3 {
   margin: 0px;
   max-width: 1100px;
   align-self: center;
-  z-index: 40;
+
+  flex-grow: 1;
 }
 
 .LatLng {
@@ -192,17 +196,18 @@ h3 {
 #sample-map {
   width: 900px;
   height: 500px;
-  z-index: 40;
-  border: 30px;
+  flex-grow: 1;
+
   border-radius: 20px;
 }
 .map {
   padding: 30px;
   border-radius: 20px;
   background-color: $grey;
+  flex-grow: 1;
 }
 .asideBar {
-  min-width: 250px;
+  width: 250px;
   background-color: $grey;
   padding: 2em;
   border-radius: 20px 0 0 20px;
@@ -224,7 +229,7 @@ h3 {
 .sidebarLinks:hover {
   word-break: break-word;
   text-decoration: none;
-  color: purple;
+  color: $roxo;
 }
 .asideBtn {
   background: none;
@@ -307,13 +312,14 @@ h3 {
 .aAuthor {
   display: flex;
   flex-direction: row;
-  align-self: center;
+  align-self: left;
 
   text-decoration: none;
   color: $roxo;
   font-weight: bolder;
 }
-.aAuthor {
+.aAuthor:hover {
+  text-align: left;
   text-decoration: none;
   color: rgb(128, 0, 128);
 }
@@ -321,8 +327,13 @@ h3 {
 .commentArea {
   width: 100%;
   background-color: $fullgrey;
+  color: white;
 }
 .commentForm {
   margin-top: 40px;
   margin-bottom: 0;
+}
+.join {
+  display: flex;
+  flex-direction: row;
 }
