--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -279,7 +279,7 @@ h3 {
 }
 
 .editBtn {
-  background: none;
+  background: inherit;
   color: $roxo;
   border: 5px solid $roxo;
   border-radius: 15px;
