--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -20,7 +20,7 @@
       </div>
       <div>
         <label for="input-picture" class="aAuthor">Profile picture:<br></label>
-        <input type="file" class="commentArea" accept="image/*" id="input-picture" name="picture" required="true" class="editBtn" style="font-size: 0.8em; margin-bottom: 1.5%;"/>
+        <input type="file" class="asideBtn commentArea" accept="image/*" id="input-picture" name="picture" required="true" style="font-size: 0.8em; margin-bottom: 1.5%;"/>
       </div>
     </div>
     
