--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -15,7 +15,7 @@
     </div>
     <div class="inputPicture">
       <label for="input-picture" class="aAuthor">Edit profile picture:<br></label>
-      <input type="file" accept="image/*" id="input-picture" value={{user.picture}} name="picture" required="true" class="editBtn" style="font-size: 0.8em;"/>
+      <input type="file" accept="image/*" id="input-picture" value={{user.picture}} name="picture" required="true" class="asideBtn" style="font-size: 0.8em;"/>
     </div>
   </div>
 
