--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -3,8 +3,8 @@
 <section class="sectionComments">
   <div class="channel background">
       <div class="map">
-        <h2>{{singleEvent.gameList}} || Host: {{singleEvent.host.name}} | {{singleEvent.numberOfPlayer}} players</h2></h2><br> 
-        <h2>{{singleEvent.date}}</h2>
+        <h2>{{singleEvent.gameList}} || Host: {{singleEvent.host.name}}</h2></h2><br> 
+        <h2>{{singleEvent.numberOfPlayer}} players || {{singleEvent.date}}</h2>
         <br>
         <div id="sample-map"></div>
         <br>
@@ -18,17 +18,11 @@
         <p>{{ name }}</p>
         {{/each}}  
 
-        <div>
-          <a href="/encounter/single/{{ singleEvent._id }}/join"><button class="asideBtn">  Join Event </button></a>
-          <a href="/encounter/single/{{ singleEvent._id }}/edit"><button class="asideBtn"> Edit event </button></a>
-          <form action="/encounter/single/{{ singleEvent._id }}/deletePlayer" method="POST"><button style="font-size: 1em" class="deleteBtn"> Leave Event </button></form>
-          <form action="/encounter/single/{{ singleEvent._id }}/delete" method="POST"><button style="font-size: 1em"class="deleteBtn"> Delete event </button></form>
-        </div>
-
+        
 
           <h2>Comments</h2>
           {{#each singleEvent.comments}}
-          <div class="commentBox">
+          <div class="commentBox" style="margin-bottom: 2.5%;">
             <a class='aAuthor' href="/profile/{{this._id}}">{{this.player}}</a>
             <p>{{this.comment}}</p>
           </div>
@@ -36,14 +30,25 @@
         {{/each}}
 
         <form action="/encounter/single/addComment?event_id={{ singleEvent._id }}" method="post">
-        <h5> Add a Comment:</h5>
-        <label for="comment"></label>
-        <textarea class="commentArea" type="text" name="comment" placeholder="Please write your comment here..."></textarea>
+        <div style="margin: 2.5% 0%;">
+          <h5> Add a Comment:</h5>
+          <label for="comment"></label>
+          <textarea class="commentArea" type="text" name="comment" placeholder="Please write your comment here..."></textarea>
+        </div>
         <button style="font-size: 1em" class="editBtn" type="submit">Submit Comment</button>
         </form>
       </div>
     </div>
 
+    
+
+    <div class="asideBar" style="min-width: 250px;">
+      <a href="/encounter/single/{{ singleEvent._id }}/join" ><button class="asideBtn">  Join Event </button></a>
+      <a href="/encounter/single/{{ singleEvent._id }}/edit"><button class="asideBtn" style="font-size: 1em" class="deleteBtn"> Edit event </button></a>
+      <form action="/encounter/single/{{ singleEvent._id }}/deletePlayer" method="POST"><button style="font-size: 1em" class="deleteBtn"> Leave Event </button></form>
+      {{>sidebar}}
+      <form action="/encounter/single/{{ singleEvent._id }}/delete" method="POST"><button style="font-size: 1em"class="deleteBtn"> Delete event </button></form>
+    </div>
   </section> 
 
 
